--- a/.gitignore
+++ b/.gitignore
@@ -72,4 +72,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux
+# End of https://www.toptal.com/developers/gitignore/api/
+**/**/node_modules/
