--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -1,10 +1,12 @@
 name: API CI
+
 #on: [push]
 on:
   push:
     paths:
       - "./api/**"
       - ".github/workflows/api-ci.yml"
+
 
 defaults:
   run:
@@ -21,10 +23,10 @@ jobs:
         with:
           node-version: 14
           cache: 'npm'
-          cache-dependency-path: './api/src/package-lock.json'
-      - name: Install
+          cache-dependency-path: ./api/package-lock.json
+      - name: install
         shell: bash
         run: npm ci
-      - name: Run unit test
+      - name: run unit test
         shell: bash
         run: npm run test
