--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -1,12 +1,10 @@
 name: API CI
-
 #on: [push]
 on:
   push:
     paths:
       - "./api/**"
       - ".github/workflows/api-ci.yml"
-
 
 defaults:
   run:
@@ -23,10 +21,34 @@ jobs:
         with:
           node-version: 14
           cache: 'npm'
-          cache-dependency-path: ./api/package-lock.json
+          cache-dependency-path: './api/package-lock.json'
+      - name: Install
+        shell: bash
+        run: npm ci
+      - name: Run unit test
+        shell: bash
+        run: npm run test
+  e2e:
+    runs-on: ubuntu-latest
+    container:
+      image: node:14
+    service:
+      mongo-e2e:
+        image: mongo:4.4
+        ports:
+          - 27017:27017
+        env:
+          MONGO_INITDB_ROOT_USERNAME: test
+          MONGO_INITDB_ROOT_PASSWORD: test123
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: install
         shell: bash
         run: npm ci
-      - name: run unit test
+      - name: run e2e
         shell: bash
-        run: npm run test
+        run: npm run test:e2e
+        env:
+          MONGO_DB_NAME: demo
+          MONGO_URL: mongodb://test:test123@mongo-e2e:27017?retryWrites=true&writeConcern=majority
