--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: node:14
-    service:
+    services:
       mongo-e2e:
         image: mongo:4.4
         ports:
